2006-12-29  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.[ch]: store the original aspect ratio.
	Let the Ctrl key toggle the aspect ratio constraint also while the
	mouse is being pressed.

	* app/tools/gimpscaletool.c (gimp_scale_tool_motion): use the
	original aspect ratio when applying the constraint.

2006-12-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: show print status information.

2006-12-29  Michael Natterer  <mitch@gimp.org>

	* app/app_procs.c
	* app/main.c: call g_thread_init() as the very first function in
	main().

2006-12-29  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/gimprc.pdb: export gimp_get_default_unit() to
	the PDB.

	* app/pdb/gimprc_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpgimprc_pdb.[ch]: regenerated.

	* libgimp/gimp.def: updated.

	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print.c: initialize units the same way the core
	Print Size dialog does it.

2006-12-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-settings: removed unused settings, bumped
	format version. Store resolution and unit in the image parasite.

	* plug-ins/print/print-page-layout.c: deal gracefully with no
	default page setup.

2006-12-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpunitmenu.c: use the toplevel widget as the
	dialog's parent.

2006-12-28  Sven Neumann  <sven@gimp.org>

	* print-draw-page.c: fill rectangles instead of masking the spans.

2006-12-28  Seth Burgess  <sjburges@gimp.org>
	
	* app/widgets/gimpdasheditor.h
	* app/widgets/gimphistogramview.h: fixed improper _GET_CLASS macros

2006-12-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c: limit the image size to the
	printable area.

	* plug-ins/print/print-draw-page.c: commented out unused code.

2006-12-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.c: comment.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c